--- a/TorontoHoodProject_Week3.ipynb
+++ b/TorontoHoodProject_Week3.ipynb
@@ -563,8 +563,8 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: UOOMQZVWLBODB1Y0QHJCHB3ISMGEBTLNF5SWM0SEYDG1ZLFA\n",
-      "CLIENT_SECRET:IJ23HCZRTTX03TCRTFR0USIJ4ULPBEZ5HINMBDQMQOWQQPC3\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
