--- a/TorontoHoodProject_Week3.ipynb
+++ b/TorontoHoodProject_Week3.ipynb
@@ -570,8 +570,8 @@
    ],
    "source": [
     "# @hidden_cell\n",
-    "CLIENT_ID = 'UOOMQZVWLBODB1Y0QHJCHB3ISMGEBTLNF5SWM0SEYDG1ZLFA' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'IJ23HCZRTTX03TCRTFR0USIJ4ULPBEZ5HINMBDQMQOWQQPC3' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "\n",
