--- a/Walkable City.ipynb
+++ b/Walkable City.ipynb
@@ -407,8 +407,8 @@
    "outputs": [],
    "source": [
     "# @hidden_cell\n",
-    "CLIENT_ID = 'UOOMQZVWLBODB1Y0QHJCHB3ISMGEBTLNF5SWM0SEYDG1ZLFA' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'IJ23HCZRTTX03TCRTFR0USIJ4ULPBEZ5HINMBDQMQOWQQPC3' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 150 # A default Foursquare API limit value"
    ]
